--- a/dev/modules/catalog/static-dress-for-new-season.pug
+++ b/dev/modules/catalog/static-dress-for-new-season.pug
@@ -3,5 +3,5 @@ each item in catalogStaticDress
     .catalog-item-text__title= item.title
     .catalog-item-text__lid= item.lid
     a.link-more.link-more-js(href=`${item.href}`) Подробнее
-    div.v-hidden= item.text
-        //- | текст подробнее
+    //- div.v-hidden= item.text
+    div.d-none= item.text
