--- a/dev/scss/blocks/_big-grid.scss
+++ b/dev/scss/blocks/_big-grid.scss
@@ -249,8 +249,9 @@
 // -----------надо сделать такие отступы для каждого .big-grid__...   свои----------------------------------
 .big-grid__item-double-center {
 
-    .catalog-item.w2 .catalog-item-photo-holder {
-        padding-top: calc(85% - 170px);
+    .catalog-item.w2 .catalog-item-photo-holder {  
+        // padding-top: calc(85% - 170px);
+        padding-top: 74%;
     }
 
     .catalog-item.w2 .slider-size {
@@ -378,3 +379,24 @@
         }
     }
 }
+
+// разделение картинок на десктопе и мобилке
+
+.img-only-desktop,
+.img-only-mobile {
+    display: none;
+}
+
+
+@media screen and (max-width:480px) {
+    .img-only-mobile {
+        display: block;
+    }  
+}
+
+@media screen and (min-width:481px) {
+    .img-only-desktop {
+        display: block;
+    }
+}
+
