fix link more on brand-large page

--- a/dev/utils/data.pug
+++ b/dev/utils/data.pug
@@ -492,7 +492,7 @@
 
   //-  данные для блока 'ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН'
   const catalogStaticDress = [
-        {title: 'ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН', href:'#', lid: 'Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков', text:'текст подробнее текст подробнее текст подробнее'},
+        {title: 'ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН', href:'#', lid: 'Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков', text:'текст подробнее текст Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков подробнее текст подробнее'},
         ]
 
   //-  данные для баннера с 2-якартинками(two-img-text)
