--- a/dev/brand-large.pug
+++ b/dev/brand-large.pug
@@ -8,11 +8,13 @@ block variables
 
 block content
   main.page-content
+    a(name="top")
     .page-inner.page-inner--w1.page-inner--mobile_empty
       include modules/filters/filterLarge
     .page-inner.overflow-x1 
       #catalog-items.big-grid
         include modules/catalog-large 
+      
 
       //- .big-grid
       //-  .big-grid__item-double-center 
