--- a/dev/modules/footer-inner.pug
+++ b/dev/modules/footer-inner.pug
@@ -95,3 +95,4 @@ div
       a(href='#') ©2022 Brusnika
     .footer-bottom__right.only-desktop
       | © 1999-2022 Интернет-магазин «Brusnika»    
+  include arrow-top 
