--- a/dev/modules/footer-light.pug
+++ b/dev/modules/footer-light.pug
@@ -2,7 +2,6 @@
 
 footer.page-footer(itemscope='' itemtype='http://schema.org/WPFooter')
   .page-inner.page-inner--w2 
-
     .footer-bottom
       .footer-bottom__left
         ul.footer-bottom__list
@@ -14,6 +13,7 @@ footer.page-footer(itemscope='' itemtype='http://schema.org/WPFooter')
       //-   a(href='#') ©2022 Brusnika
       .footer-bottom__right
         | Разработка сайта — RUFORMAT®
+    .arrow-top
 
 
 
