--- a/dev/css/project-main.css
+++ b/dev/css/project-main.css
@@ -6031,6 +6031,11 @@ ul.footer-top__list {
     border-top: 1px solid #E1E1E1;
   }
 }
+.scroll-container {
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
 .arrow-top {
   width: 50px;
   height: 50px;
@@ -6057,10 +6062,11 @@ ul.footer-top__list {
   position: absolute;
   background-image: url(../dummy/svg/arrow.svg);
   background-repeat: no-repeat;
-  background-position: center 13px;
+  background-position: center center;
 }
 
 .arrow-top__visible {
+  z-index: 100;
   opacity: 1;
   transition: all 1.5s;
   transform: translateY(0%);
