--- a/dev/css/project-main.scss
+++ b/dev/css/project-main.scss
@@ -63,6 +63,11 @@
 //   }  
 // }
 
+.scroll-container {
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
 .arrow-top { 
   width: 50px;
   height: 50px;
@@ -89,10 +94,11 @@
   position: absolute;
   background-image: url(../dummy/svg/arrow.svg);
   background-repeat: no-repeat;
-  background-position: center 13px;
+  background-position: center center;
 }
 
 .arrow-top__visible {
+  z-index: 100;
   opacity: 1;
   transition: all 1.5s;
   transform: translateY(0%);
