--- a/dev/layout/main.pug
+++ b/dev/layout/main.pug
@@ -9,7 +9,7 @@ include ../utils/data
 include ../utils/mixins 
 
 
-html.no-js(lang='ru' prefix='og:http://ogp.me/ns#')
+html.no-js(lang='ru' prefix='og:http://ogp.me/ns#' class="scroll-container")
   include ../modules/head
   body.overflow-x(class={'body-main':mainPage,
 				'body-inner':innerPage})
