fix basket page mobile version

--- a/dev/basket-moscow.pug
+++ b/dev/basket-moscow.pug
@@ -14,7 +14,7 @@ block content
           .col-md-6
             .d-md-none.mb-3
               a.link.link--black(href='#') Назад к покупкам
-            .basket-form__title Оформление заказа
+            .basket-form__title.uppercase.mb-15px Оформление заказа
             .basket-form__text    Обработка заказов ежедневно
               nobr 09:00 — 21:00
           .col-auto.d-none.d-md-block
