--- a/dev/basket.pug
+++ b/dev/basket.pug
@@ -9,12 +9,12 @@ block variables
 block content
   main.page-content
     .page-inner.page-inner--w2
-      .basket__page-header
+      .basket__page-header.basket__page-header--basket
         .row.align-items-end.justify-content-between
           .col-md-6
             .d-md-none.mb-3
               a.link.link--black(href='#') Назад к покупкам
-            .basket-form__title Оформление заказа
+            .basket-form__title.basket-form__title--first.uppercase Оформление заказа
             .basket-form__text    Обработка заказов ежедневно
               nobr 09:00 — 21:00
           .col-auto.d-none.d-md-block
