--- a/dev/modules/basket/items-in-order.pug
+++ b/dev/modules/basket/items-in-order.pug
@@ -1,6 +1,6 @@
 
 .order-content
-  .order__title Товары в заказе
+  .order__title Товары в заказе (2)
   .order-table.order-table_basket
 
     include ../../modules/basket/items-in-basket
