--- a/dev/modules/catalog/static-dress-for-new-season.pug
+++ b/dev/modules/catalog/static-dress-for-new-season.pug
@@ -2,5 +2,5 @@ each item in catalogStaticDress
   .catalog-item-text
     .catalog-item-text__title= item.title
     .catalog-item-text__lid= item.lid
-    a.link-more.link-more-js(href=`${item.href}`) Подробнее
+    a.link-more.link-more-text-js(href=`${item.href}`) Подробнее
     div.d-none= item.text
