--- a/dev/modules/menus/header-menu-light.pug
+++ b/dev/modules/menus/header-menu-light.pug
@@ -1,6 +1,6 @@
 
 .page-inner.page-inner--w1.desktop
-  .header-menu
+  .header-menu.header-menu--light
     .header-menu__left
       ul.header-menu__list
         li.header-menu__item.header-menu__item_catalog
