--- a/dev/scss/blocks/_history.scss
+++ b/dev/scss/blocks/_history.scss
@@ -3,9 +3,9 @@
 
 .history {
 
-    .page-heading {
-        border:1px solid green;
-    }
+    // .page-heading {
+    //     border:1px solid green;
+    // }
 
     .order-row { 
         display: flex;
