--- a/dev/css/project.responsive.scss
+++ b/dev/css/project.responsive.scss
@@ -678,9 +678,9 @@ body .mobile-nav-menu-item-holder.open:before {
     font-size: 16px;
     line-height: 30px;
   }
-  .form-row {
-    margin-bottom: 20px;
-  }
+  // .form-row {
+  //   margin-bottom: 20px;
+  // }
   .jcf-number {
     top: 0;
     height: 25px;
@@ -894,7 +894,7 @@ body .mobile-nav-menu-item-holder.open:before {
     border-top: 1px solid #1d1d1d;
   }
   .order-content {
-    margin: -20px 0 50px 0;
+    margin: 0px 0 50px 0;
     padding: 0;
     font-size: 16px;
   }
