--- a/dev/css/project.scss
+++ b/dev/css/project.scss
@@ -963,9 +963,12 @@ hr {
   border-top: 1px solid $color-black;
 }
 
-.page-text small,
-.small {
+.page-text .small { 
   font-size: 14px;
+
+  @media screen and (max-width:480px) {
+    font-size: 12px;
+  }
 }
 
 .page-text .usmall {
@@ -1404,9 +1407,9 @@ span.form-item--error {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   display: inline-block;
-  width: 16px;
-  min-width: 16px;
-  height: 16px;
+  width: 20px;
+  min-width: 20px;
+  height: 20px;
   border: 1px solid #a7a7a7;
   background-color: #fff;
   border-radius: 50%;
@@ -1419,16 +1422,16 @@ span.form-item--error {
 
 .jcf-radio span {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 9px;
+  top: 9px;
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   display: block;
-  width: 7px;
-  height: 7px;
+  width: 8px;
+  height: 8px;
   border-radius: 50%;
   background-color: $color-black;
   opacity: 0;
@@ -1451,7 +1454,7 @@ span.form-item--error {
 }
 
 .jcf-radio.jcf-checked {
-  border: 2px solid $color-black;
+  border: 1px solid $color-black;
 }
 
 .jcf-radio.jcf-checked span {
