--- a/dev/modules/basket/total-cost.pug
+++ b/dev/modules/basket/total-cost.pug
@@ -26,7 +26,7 @@
         button.btn.btn--medium.btn--black_border.mx-auto.w-100(type='button') Применить
 
   //- a.btn.btn--large.btn--black.btn--fullwidth(href='#checkout-popup' data-popup='{"type":"inline"}') ОФОРМИТЬ ЗАКАЗ
-  button.btn.btn--large.btn--black.btn--fullwidth(type='submit') ОФОРМИТЬ ЗАКАЗ
+  button.btn.btn--medium.btn--black.btn--fullwidth(type='submit') ОФОРМИТЬ ЗАКАЗ
   .form-policy
     .page-text
       .small
