fix: authorizations popups - not finish

--- a/dev/modules/footer-popups.pug
+++ b/dev/modules/footer-popups.pug
@@ -14,6 +14,7 @@ include ./popups/nosms
 include ./popups/sms-cod-popup
 include ./popups/catalog-size-popup
 include ./popups/change-size-popup
+include ./popups/change-password-text
 
 //- include ./popups/show-on-map-popup  
 include ./popups/checkout-popup 
