--- a/dev/css/project-main.css
+++ b/dev/css/project-main.css
@@ -2629,10 +2629,14 @@ ul.disc {
   padding-left: 30px;
 }
 
-#form_email > .form-row:first-child,
-#form_phone > .form-row:first-child,
-#auth-form_phone > .form-row:first-child,
-#auth-form_email > .form-row:first-child {
+#change-password-popup #form_email > .form-row:first-child,
+#change-password-popup #form_phone > .form-row:first-child,
+#change-password-popup #auth-form_phone > .form-row:first-child,
+#change-password-popup #auth-form_email > .form-row:first-child,
+#auth-form #form_email > .form-row:first-child,
+#auth-form #form_phone > .form-row:first-child,
+#auth-form #auth-form_phone > .form-row:first-child,
+#auth-form #auth-form_email > .form-row:first-child {
   position: absolute;
   left: 0;
   top: 0;
