--- a/dev/modules/popups/change-password-popup.pug
+++ b/dev/modules/popups/change-password-popup.pug
@@ -18,7 +18,8 @@
             .form-item-holder
               input#auth_sms.form-item.form-item--text(type='tel' name='auth_sms' required='' placeholder='+7-___-___-___' data-validation='{"message": "Укажите номер телефона", "mask": "+7 999-999-999"}')
           .form-row
-            button.btn.btn--black.btn--medium.w100.max-w100(type='submit') ВЫСЛАТЬ КОД
+            //- button.btn.btn--black.btn--medium.w100.max-w100(type='submit') ВЫСЛАТЬ КОД
+            a.btn.btn--black.btn--medium.w100.max-w100(href='#sms-cod-popup' data-popup='{"type":"inline"}') ВЫСЛАТЬ КОД
 
         #form_email.tab-content-item.tab.active.form-tab-content-item
           .form-row
@@ -30,4 +31,5 @@
               input#auth_email.form-item.form-item--text(type='email' name='auth_email' required='' data-validation='{"message": "Укажите корректный e-mail"}')
 
           .form-row
-            button.btn.btn--black.btn--medium.w100.max-w100(type='submit') ОТПРАВИТЬ
+            //- button.btn.btn--black.btn--medium.w100.max-w100(type='submit') ОТПРАВИТЬ
+            a.btn.btn--black.btn--medium.w100.max-w100(href='#change-password-text-popup' data-popup='{"type":"inline"}') ОТПРАВИТЬ
