--- a/dev/scss/blocks/_form.scss
+++ b/dev/scss/blocks/_form.scss
@@ -19,10 +19,16 @@ ul.disc {
 }
 
 // меняем местами текст и закладки (дизайн такой)
-#form_email > .form-row:first-child, 
-#form_phone > .form-row:first-child, 
-#auth-form_phone > .form-row:first-child,
-#auth-form_email > .form-row:first-child { 
+#change-password-popup #form_email > .form-row:first-child, 
+#change-password-popup #form_phone > .form-row:first-child, 
+#change-password-popup #auth-form_phone > .form-row:first-child,
+#change-password-popup #auth-form_email > .form-row:first-child,
+
+#auth-form #form_email > .form-row:first-child, 
+#auth-form #form_phone > .form-row:first-child, 
+#auth-form #auth-form_phone > .form-row:first-child,
+#auth-form #auth-form_email > .form-row:first-child
+ { 
   position: absolute;
   left: 0;
   top: 0;
