--- a/dev/modules/popups/auth-form.pug
+++ b/dev/modules/popups/auth-form.pug
@@ -38,7 +38,7 @@
 
               .form-row
                 label.form-label(for='reg_pass1') Пароль
-                input#reg_pass1.form-item.form-item--password(type='password' name='reg_pass1' required='' data-validation='{"minlength": "6", "message": {"required": "", "minlength": "Минимальная длина пароля – 6 символов"}}')
+                input#reg_pass1.form-item.form-item--password(type='password' name='reg_pass1' required='' data-validation='{"minlength": "6", "message": {"required": "", "minlength": "Длина пароля не мнее 6 символов – 6 символов"}}')
                 span.password-show
 
               .form-row
