--- a/dev/modules/popups/registration.pug
+++ b/dev/modules/popups/registration.pug
@@ -22,11 +22,11 @@
         input#f4.form-item.form-item--text(type='text' name='f4' data-validation='{"message": "Укажите корректный номер телефона", "pattern": "phoneRU", "mask": "+7 (999) 999-99-99"}' required='' value='+7 556 666-66-6')
       .form-row
         label.form-item-label(for='reg_pass1') Новый пароль
-        input#reg_pass1.form-item.form-item--password(type='password' name='reg_pass1' required='' data-validation='{"minlength": "6", "message": {"required": "", "minlength": "Минимальная длина пароля – 6 символов"}}')
+        input#reg_pass1.form-item.form-item--password(type='password' name='reg_pass1' required='' data-validation='{"minlength": "6", "message": {"required": "", "minlength": "Длина пароля не мнее 6 символов – 6 символов"}}')
         span.password-show  
       .form-row
         label.form-item-label(for='reg_pass2') Новый пароль еще раз
-        input#reg_pass2.form-item.form-item--password(type='password' name='reg_pass2' required='' data-validation='{"minlength": "6", "equalTo": "#reg_pass1", "message": {"equalTo": "Пароли не совпадают", "required": "", "minlength": "Минимальная длина пароля – 6 символов"}}')
+        input#reg_pass2.form-item.form-item--password(type='password' name='reg_pass2' required='' data-validation='{"minlength": "6", "equalTo": "#reg_pass1", "message": {"equalTo": "Пароли не совпадают", "required": "", "minlength": "Длина пароля не мнее 6 символов – 6 символов"}}')
         span.password-show
       .form-row.form-row--checkbox
         input#saile.form-item.form-item--checkbox.catalog-item-checkbox(type='checkbox' checked='checked')
